# trading-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
plotting/: plotter.py
src/: CMakeLists.txt  console_agent.cpp  console_observer.hpp  csv_writer.hpp  i_market_observer.hpp  i_matching_engine.hpp  i_order_book.hpp  i_order_types.hpp  input_parser.hpp  main.cpp  market_agent.cpp  market_observer.cpp  market_observer.hpp  matching_engine.cpp  matching_engine.hpp  order_book.cpp  order_book.hpp  random_bot.cpp  runner.cpp  runner.hpp
src/agents/: console_agent.cpp  console_agent.hpp  market_agent.hpp  random_bot.cpp  random_bot.hpp
src/bots/: random_bot.cpp  random_bot.hpp
src/engine/: matching_engine.cpp  matching_engine.hpp  order_book.cpp  order_book.hpp  order_types.cpp
src/include/: i_matching_engine.hpp  i_order_book.hpp  i_order_types.hpp
src/observers/: console_observer.cpp  csv_writer.cpp  market_notifier.cpp  market_notifier.hpp  market_observer.cpp  market_observer.hpp
tests/: CMakeLists.txt  mock_matching_engine.hpp  test.cpp  test_console_agent.cpp  test_console_observer.cpp  test_matching_engine.cpp  test_runner.cpp
